--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
           </li>
         </ul>
       </nav>
-      <p class="footer__copyright">© 2020. Впишите своё имя</p>
+      <p class="footer__copyright">&copy; 2022. Olga GSF</p>
     </footer>
   </div>
 </body>
