--- a/index.html
+++ b/index.html
@@ -183,24 +183,19 @@
       <nav class="footer__links footer__links_content">
         <ul class="footer__links">
           <li class="footer__link">
-            <a href="1. Карты:
-            https://yandex.ru/maps" class="footer__link">Карты</a>
+            <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
           </li>
           <li class="footer__link">
-            <a href="2. Погода:
-            https://yandex.ru/pogoda" class="footer__link">Погода</a>
+            <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
           </li>
           <li class="footer__link">
-            <a href="3. Расписание:
-            https://rasp.yandex.ru" class="footer__link">Расписание</a>
+            <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
           </li>
           <li class="footer__link">
-            <a href="4. Календарь:
-            https://calendar.yandex.ru" class="footer__link">Календарь</a>
+            <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
           </li>
           <li class="footer__link">
-            <a href="5. Путешествия:
-            https://travel.yandex.ru" class="footer__link">Путешествия</a>
+            <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
           </li>
         </ul>
       </nav>
