--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="./sprint-3-images/lead-polka.jpg" alt="основная картинка" class="lead__image">
         <p class="lead__caption">ваша полка — верхняя</p>
       </section>
-      <section class="intro center_section-size_small">
+      <section class="intro center center_section-size_small">
         <h2 class="intro__title">Чего мы там не видели?</h2>
         <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют
           провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая
@@ -45,44 +45,46 @@
             241</li>
         </ul>
       </section>
-      <ul class="photo-grid__items center">
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-train.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-tuman.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-sochi.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-arisa.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-baikal.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-elbrus.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-        <li class="photo-grid__item">
-          <img src="./sprint-3-images/photo-grid-ergaki.jpg" alt="пейзаж" class="photo-grid__item">
-        </li>
-      </ul>
+      <div class="photo-grid center">
+        <ul class="photo-grid__items">
+          <li>
+            <img src="./sprint-3-images/photo-grid-train.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-tuman.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-sochi.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-arisa.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-baikal.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-elbrus.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+          <li>
+            <img src="./sprint-3-images/photo-grid-ergaki.jpg" alt="пейзаж" class="photo-grid__item">
+          </li>
+        </ul>
+      </div>
       <section class="places center">
         <div class="places__item">
           <h2 class="places__title">Куршская коса</h2>
