--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
   <div class="page center">
     <header class="header center">
       <img src="./sprint-3-images/header-logo.svg" alt="лого" class="logo">
-      <div class="header__lang-links">
-        <a href="#" class="header__lang-link header__lang-link_lang_ru">Ru</a>
-        <a href="#" class="header__lang-link header__lang-link_lang_en">En</a>
-      </div>
+      <ul class="header__lang-links">
+        <li><a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+        </li>
+        <li><a href="#" class="header__lang-link">En</a>
+        </li>
+      </ul>
     </header>
     <main class="content">
       <section class="lead center">
@@ -35,17 +37,17 @@
         <ul class="intro__list">
           <li class="intro__list-item"><span class="intro__list-item intro__list-item_span-accent">Часовых поясов</span>
             11</li>
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_span-accent">Объектов природного
+          <li class="intro__list-item"><span class="span-accent">Объектов природного
               наследия ЮНЕСКО</span> 12</li>
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_span-accent">Объектов
+          <li class="intro__list-item"><span class="span-accent">Объектов
               культурного наследия ЮНЕСКО</span> 16</li>
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_span-accent">Природных
+          <li class="intro__list-item"><span class="span-accent">Природных
               заповедников</span> 105</li>
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_span-accent">Аэропортов</span>
+          <li class="intro__list-item"><span class="span-accent">Аэропортов</span>
             241</li>
         </ul>
       </section>
-      <div class="photo-grid center">
+      <section class="photo-grid center">
         <ul class="photo-grid__items">
           <li>
             <img src="./sprint-3-images/photo-grid-train.jpg" alt="пейзаж" class="photo-grid__item">
@@ -84,15 +86,15 @@
             <img src="./sprint-3-images/photo-grid-ergaki.jpg" alt="пейзаж" class="photo-grid__item">
           </li>
         </ul>
-      </div>
+      </section>
       <section class="places center">
         <div class="places__item">
           <h2 class="places__title">Куршская коса</h2>
           <div class="places__website">
-            <h3 class="places__website-heading">URL</h3>
-            <a href="http://park-kosa.ru" class="places__website-link">park-kosa.ru</a>
+            <span class="places__website-heading">URL</span>
+            <a href="http://park-kosa.ru" class="places__website-link" target="_blank">park-kosa.ru</a>
           </div>
-          <img src="./sprint-3-images/place-kosa.jpg" alt="картинка" class="places__image">
+          <img src="./sprint-3-images/place-kosa.jpg" alt="Куршская коса" class="places__image">
           <div class="places__text">
             <p class="places__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта —
               спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная
@@ -107,11 +109,11 @@
         <div class="places__item">
           <h2 class="places__title">Кольский</h2>
           <div class="places__website">
-            <h3 class="places__website-heading">URL</h3>
-            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
-              class="places__website-link">National Geographic</a>
+            <span class="places__website-heading">URL</span>
+            <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="places__website-link"
+              target="_blank">National Geographic</a>
           </div>
-          <img src="./sprint-3-images/place-kolsky.jpg" alt="картинка" class="places__image">
+          <img src="./sprint-3-images/place-kolsky.jpg" alt="Кольский" class="places__image">
           <div class="places__text">
             <p class="places__paragraph">Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой
               на юг —
@@ -126,11 +128,11 @@
         <div class="places__item">
           <h2 class="places__title">Алтай</h2>
           <div class="places__website">
-            <h3 class="places__website-heading">URL</h3>
-            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
-              class="places__website-link">Facebook</a>
+            <span class="places__website-heading">URL</span>
+            <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="places__website-link"
+              target="_blank">Facebook</a>
           </div>
-          <img src="./sprint-3-images/place-altai.jpg" alt="картинка" class="places__image">
+          <img src="./sprint-3-images/place-altai.jpg" alt="Алтай" class="places__image">
           <div class="places__text">
             <p class="places__paragraph">Алтай — одно из красивейших мест в России.
               В первую очередь из-за гор: если ехать вдоль хребта, вы увидите склоны, усыпанные соснами, горные реки и
@@ -144,10 +146,11 @@
         <div class="places__item">
           <h2 class="places__title">Зимний Байкал</h2>
           <div class="places__website">
-            <h3 class="places__website-heading">URL</h3>
-            <a href="https://vk.com/baikalmile" class="places__website-link">https://vk.com/baikalmile</a>
+            <span class="places__website-heading">URL</span>
+            <a href="https://vk.com/baikalmile" class="places__website-link"
+              target="_blank">https://vk.com/baikalmile</a>
           </div>
-          <img src="./sprint-3-images/place-winter-baikal.jpg" alt="картинка" class="places__image">
+          <img src="./sprint-3-images/place-winter-baikal.jpg" alt="Зимний Байкал" class="places__image">
           <div class="places__text">
             <p class="places__paragraph">Всем известен Байкал как крупнейшее озеро
               в мире. Многие также знают, что это самый большой источник пресной воды и одно из красивейших мест в
@@ -161,10 +164,10 @@
         <div class="places__item">
           <h2 class="places__title">Карелия</h2>
           <div class="places__website">
-            <h3 class="places__website-heading">URL</h3>
-            <a href="http://vodlozero.ru" class="places__website-link">http://vodlozero.ru/</a>
+            <span class="places__website-heading">URL</span>
+            <a href="http://vodlozero.ru" class="places__website-link" target="_blank">http://vodlozero.ru/</a>
           </div>
-          <img src="./sprint-3-images/place-karelia.jpg" alt="картинка" class="places__image">
+          <img src="./sprint-3-images/place-karelia.jpg" alt="Карелия" class="places__image">
           <div class="places__text">
             <p class="places__paragraph">Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская
               лиственница не растёт западнее Водлозера. Зато здесь она вымахивает на 30 метров — леса карельских
@@ -175,29 +178,31 @@
           </div>
         </div>
       </section>
-      <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover center">
-        <h3 class="cover__title">До Байкала «на собаках»</h3>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
-          электричках.</p>
-      </a>
+      <section class="cover center">
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" class="cover__overlay" target="_blank">
+          <h3 class="cover__title">До Байкала «на собаках»</h3>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на
+            электричках.</p>
+        </a>
+      </section>
     </main>
-    <footer class="footer center">
-      <nav class="footer__links footer__links_content">
+    <footer class="footer">
+      <nav class="footer__links-content">
         <ul class="footer__links">
-          <li class="footer__link">
-            <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+          <li>
+            <a href="https://yandex.ru/maps" class="footer__link" target="_blank">Карты</a>
           </li>
-          <li class="footer__link">
-            <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+          <li>
+            <a href="https://yandex.ru/pogoda" class="footer__link" target="_blank">Погода</a>
           </li>
-          <li class="footer__link">
-            <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+          <li>
+            <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
           </li>
-          <li class="footer__link">
-            <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+          <li>
+            <a href="https://calendar.yandex.ru" class="footer__link target=" _blank"">Календарь</a>
           </li>
-          <li class="footer__link">
-            <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+          <li>
+            <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
           </li>
         </ul>
       </nav>
