--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <a href="https://rasp.yandex.ru" class="footer__link" target="_blank">Расписание</a>
           </li>
           <li>
-            <a href="https://calendar.yandex.ru" class="footer__link target=" _blank"">Календарь</a>
+            <a href="https://calendar.yandex.ru" class="footer__link" target="_blank">Календарь</a>
           </li>
           <li>
             <a href="https://travel.yandex.ru" class="footer__link" target="_blank">Путешествия</a>
