Done after review2

--- a/index.html
+++ b/index.html
@@ -35,55 +35,55 @@
           смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч
           километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
         <ul class="intro__list">
-          <li class="intro__list-item"><span class="intro__list-item intro__list-item_span-accent">Часовых поясов</span>
+          <li class="intro__list-item"><span class="intro__span-accent">Часовых поясов</span>
             11</li>
-          <li class="intro__list-item"><span class="span-accent">Объектов природного
+          <li class="intro__list-item"><span class="intro__span-accent">Объектов природного
               наследия ЮНЕСКО</span> 12</li>
-          <li class="intro__list-item"><span class="span-accent">Объектов
+          <li class="intro__list-item"><span class="intro__span-accent">Объектов
               культурного наследия ЮНЕСКО</span> 16</li>
-          <li class="intro__list-item"><span class="span-accent">Природных
+          <li class="intro__list-item"><span class="intro__span-accent">Природных
               заповедников</span> 105</li>
-          <li class="intro__list-item"><span class="span-accent">Аэропортов</span>
+          <li class="intro__list-item"><span class="intro__span-accent">Аэропортов</span>
             241</li>
         </ul>
       </section>
       <section class="photo-grid center">
         <ul class="photo-grid__items">
           <li>
-            <img src="./sprint-3-images/photo-grid-train.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-train.jpg" alt="Поезд" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-atharva-tulsi.jpg" alt="Атхар-ва-тулси" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-tuman.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-tuman.jpg" alt="Туман" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-sochi.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-sochi.jpg" alt="Сочи" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-arisa.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-arisa.jpg" alt="Ариса" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-baikal.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-baikal.jpg" alt="Байкал" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-elbrus.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-elbrus.jpg" alt="Эльбрус" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-kondratiev.jpg" alt="Кондратьев" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-kamchatka-1.jpg" alt="Камчатка1" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-kamchatka-2.jpg" alt="Камчатка2" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-baikal-2.jpg" alt="Байкал2" class="photo-grid__item">
           </li>
           <li>
-            <img src="./sprint-3-images/photo-grid-ergaki.jpg" alt="пейзаж" class="photo-grid__item">
+            <img src="./sprint-3-images/photo-grid-ergaki.jpg" alt="Эргаки" class="photo-grid__item">
           </li>
         </ul>
       </section>
